# CppUtilities

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/js/: algorithm.hpp  iterator.hpp  random.hpp  stopwatch.hpp  stream.hpp  tuple.hpp  type_traits.hpp
include/js/algorithm/: parallel_algorithm.hpp  sort.hpp
include/js/iterator/: iter_traits.hpp  iterator_tuple.hpp  zip.hpp
include/js/random/: distribution.hpp  random_device.hpp
include/js/stream/: basic_file_handler.hpp
include/js/tuple/: taggedtuple.hpp  tuple_functions.hpp
include/js/type_traits/: container_concepts.hpp  container_traits.hpp  std_extension.hpp
test/: CMakeLists.txt  test_algorithm.cpp  test_iterator.cpp  test_tuple.cpp  test_type_traits.cpp
